feat: upadte the resume

--- a/blue.css
+++ b/blue.css
@@ -5,7 +5,7 @@
     --borderColor:#164D56;
 
     --mainText:#fff;
-    --secondaryText:#eeeeee;
+    --secondaryText:#4b5156;
 
     --themeDotBorder:#fff;
 
