--- a/default.scss
+++ b/default.scss
@@ -18,6 +18,8 @@
 html, body{
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
 }
 
 body *{
@@ -274,7 +276,7 @@ h6 {font-size:16px;}
 
 #skills {
   display:flex;
-  justify-content:space-evenly;
+  gap:10px;
   background-color: var(--previewShadow);
 }
 
@@ -283,6 +285,11 @@ h6 {font-size:16px;}
   align-content:center;
   text-align:center;
   
+  a svg {
+    width:24px;
+    height:24px;
+    fill: var(--mainText);
+  }
 }
 
 #cover-img{
@@ -294,18 +301,30 @@ h6 {font-size:16px;}
   grid-template-columns:repeat(auto-fit, 320px);
   gap:20px;
   justify-content: center;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 .post{
   border: 1px solid var(--borderColor);
-  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
   box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
 
   &:hover {
     transform:scale(1.1);
+    box-shadow: -1px 1px 10px -1px rgba(0,0,0,0.75);
   }
+}
+
+.post-links {
+  display:flex;
+  justify-content: space-between;
+}
+
+.post-tag {
+  font-size:10px;
+  background-color: #b6b6b6;
+  color:#24292e;
+  border-radius:10px;
+  padding:0 5px;
 }
 
 
@@ -364,6 +383,10 @@ h6 {font-size:16px;}
 @media screen and (max-width:1200px){
   .main-container{
       width:95%;
+  }
+
+  #skills {
+    flex-direction: column;
   }
 }
 
