--- a/green.css
+++ b/green.css
@@ -5,7 +5,7 @@
     --borderColor:#161914;
 
     --mainText:#fff;
-    --secondaryText:#eeeeee;
+    --secondaryText:#4b5156;
 
     --themeDotBorder:#fff;
 
