--- a/default.scss
+++ b/default.scss
@@ -320,11 +320,11 @@ h6 {font-size:16px;}
 }
 
 .post-tag {
-  font-size:10px;
+  font-size:11px;
   background-color: #b6b6b6;
   color:#24292e;
   border-radius:10px;
-  padding:0 5px;
+  padding:2px 5px;
 }
 
 
