--- a/default.css
+++ b/default.css
@@ -1,16 +1,17 @@
 :root {
-  --mainColor:#eaeaea;
-  --secondaryColor:#fff;
-  --borderColor:#c1c1c1;
-  --mainText:black;
-  --secondaryText:#4b5156;
-  --themeDotBorder:#24292e;
-  --previewBg:rgb(251,249,243,0.8);
-  --previewShadow:#f0ead6;
-  --btnColor:black;
+  --mainColor: #eaeaea;
+  --secondaryColor: #fff;
+  --borderColor: #c1c1c1;
+  --mainText: black;
+  --secondaryText: #4b5156;
+  --themeDotBorder: #24292e;
+  --previewBg: rgb(251, 249, 243, 0.8);
+  --previewShadow: #f0ead6;
+  --btnColor: black;
 }
 
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
@@ -22,15 +23,27 @@ body * {
   transition: 0.3s;
 }
 
-h1, h2, h3, h4, h5, h6, strong {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
   color: var(--mainText);
-  font-family: 'Russo One', sans-serif;
+  font-family: "Russo One", sans-serif;
   font-weight: 500;
 }
 
-p, li, span, label, input, textarea, div {
+p,
+li,
+span,
+label,
+input,
+textarea,
+div {
   color: var(--mainText);
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 a {
@@ -84,7 +97,7 @@ h6 {
   display: grid;
   text-align: center;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
   min-height: 10em;
 }
 
@@ -97,10 +110,12 @@ h6 {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 3em 30em;
-      grid-template-rows: 3em 30em;
-      grid-template-areas: 'nav-wrapper nav-wrapper' 'left-column right-column';
+  grid-template-rows: 3em 30em;
+  grid-template-areas:
+    "nav-wrapper nav-wrapper"
+    "left-column right-column";
 }
 
 .nav-wrapper {
@@ -114,11 +129,11 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: var(--mainColor);
 }
 
@@ -145,15 +160,15 @@ h6 {
 }
 
 #dot-1 {
-  background-color: #FC6058;
+  background-color: #fc6058;
 }
 
 #dot-2 {
-  background-color: #FEC02F;
+  background-color: #fec02f;
 }
 
 #dot-3 {
-  background-color: #2ACA3E;
+  background-color: #2aca3e;
 }
 
 .browser-dot {
@@ -180,7 +195,7 @@ h6 {
   height: 200px;
   width: 200px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border: 2px solid var(--borderColor);
 }
 
@@ -189,8 +204,8 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .theme-dot {
@@ -222,7 +237,7 @@ h6 {
 }
 
 #purple-mod {
-  background-color: #7E4C74;
+  background-color: #7e4c74;
 }
 
 #setting-note {
@@ -238,7 +253,7 @@ h6 {
   display: -ms-grid;
   display: grid;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -291,8 +306,8 @@ h6 {
 .about-wrapper {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(320px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  -ms-grid-columns: (minmax(320px, 1fr)) [auto-fit];
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   padding-top: 50px;
   padding-bottom: 50px;
   gap: 100px;
@@ -310,7 +325,7 @@ h6 {
   display: -ms-grid;
   display: grid;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
   text-align: center;
 }
 
@@ -327,26 +342,28 @@ h6 {
 .post-wrapper {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (320px)[auto-fit];
-      grid-template-columns: repeat(auto-fit, 320px);
+  -ms-grid-columns: (320px) [auto-fit];
+  grid-template-columns: repeat(auto-fit, 320px);
   gap: 20px;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-bottom: 20px;
 }
 
 .post {
+  height: 100%;
+  background: #fff;
   border: 1px solid var(--borderColor);
   -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
-          box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
 }
 
 .post:hover {
   -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
   -webkit-box-shadow: -1px 1px 10px -1px rgba(0, 0, 0, 0.75);
-          box-shadow: -1px 1px 10px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 10px -1px rgba(0, 0, 0, 0.75);
 }
 
 .post-links {
@@ -354,14 +371,14 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .post-tag {
   font-size: 11px;
-  background-color: #b6b6b6;
-  color: #24292e;
+  background-color: lightgoldenrodyellow;
+  color: darksalmon;
   border-radius: 10px;
   padding: 2px 5px;
 }
@@ -371,7 +388,7 @@ h6 {
   width: 100%;
   height: 180px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .post-preview {
@@ -426,21 +443,24 @@ h6 {
   #skills {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
 @media screen and (max-width: 800px) {
   .intro-wrapper {
     -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-        grid-template-areas: 'nav-wrapper' 'left-column' 'right-column';
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "nav-wrapper"
+      "left-column"
+      "right-column";
   }
   .right-column {
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 /*# sourceMappingURL=default.css.map */
